Fix Chrome style insertion bug
When the user selected an entity and removed it Chrome inserted a style
tag at the cursor position which messed up subsequent completion
predictions.
Telling Chrome that styles are already taken care of prevents this bug.

--- a/static/style.css
+++ b/static/style.css
@@ -122,6 +122,10 @@ form {
     white-space: pre;
 }
 
+#question span {
+    color: var(--text-color);
+}
+
 .entity {
     background-color: transparent;
     color: var(--main-color-dark);
